[gd_scene load_steps=7 format=3 uid="uid://bsor251gbadiw"]

[ext_resource type="Texture2D" uid="uid://c1p68lk7gr7be" path="res://deck/blank_card.png" id="1_4uooh"]
[ext_resource type="Script" uid="uid://cdathsbuomtsu" path="res://godot/card/card.gd" id="1_6n70q"]
[ext_resource type="Theme" uid="uid://dwiprckaksdy1" path="res://godot/card/card_theme.tres" id="2_1d8r6"]
[ext_resource type="Texture2D" uid="uid://dsksdmccbhpld" path="res://hero/melee.png" id="2_kl81i"]
[ext_resource type="PackedScene" uid="uid://ck7ukbhe6n7ut" path="res://godot/unit/unit.tscn" id="5_38227"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6n70q"]
size = Vector2(62, 62)

[node name="Card" type="Node2D"]
script = ExtResource("1_6n70q")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(32, 32)
texture = ExtResource("1_4uooh")

[node name="Area" type="Area2D" parent="Background"]
position = Vector2(-32, -32)

[node name="CollisionShape" type="CollisionShape2D" parent="Background/Area"]
position = Vector2(31, 30)
shape = SubResource("RectangleShape2D_6n70q")

[node name="Picture" type="Sprite2D" parent="Background"]
position = Vector2(-1, 8)
texture = ExtResource("2_kl81i")

[node name="Title" type="Label" parent="Background"]
offset_left = -28.0
offset_top = -24.0
offset_right = 12.0
offset_bottom = -1.0
theme = ExtResource("2_1d8r6")
text = "Title"

[node name="Price" type="Label" parent="Background"]
offset_left = -14.0
offset_top = -12.0
offset_right = 26.0
offset_bottom = 11.0
theme = ExtResource("2_1d8r6")
text = "5"
horizontal_alignment = 2

[node name="Unit" parent="." instance=ExtResource("5_38227")]
position = Vector2(32, 92)

[node name="Members" type="Node" parent="."]

[connection signal="input_event" from="Background/Area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="Background/Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Background/Area" to="." method="_on_area_mouse_exited"]
